--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --titles__color: rgb(33, 33, 33);
   --text__color: rgb(117, 117, 117);
   --background__color: rgb(47, 48, 58);
+  --background__color2: rgba(255, 255, 255, 0.1);
   --buttons__color: rgb(32, 148, 243);
   --primary__color: rgb(255, 255, 255);
   --font-family: "roboto", sans-serif;
@@ -29,12 +30,11 @@ ul {
   border: 1px solid;
   color: var(--border);
 }
-
+.cointainer__footerbox,
 .cointainer__navigation,
 .cointainer__equipment,
 .cointainer__images,
 .cointainer__service,
-.contact__footer,
 .portafolio__cointainer,
 .portafolio__button,
 .portafolio__images,
@@ -72,13 +72,27 @@ ul {
   gap: 50px;
 }
 .navigation__link {
+  position: relative;
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
+  padding: 32px 0px;
   color: var(--titles__color);
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--buttons__color);
+  border-radius: 2px;
 }
 
 .list__address {
@@ -279,8 +293,42 @@ ul {
   height: 252px;
 }
 
-.cointainer__footer {
+.cointainer__footerbox {
+  display: flex;
+  gap: 70px;
+  margin: auto;
+}
+
+.cointainer__footer,
+.social__footer {
   padding: 60px 0;
+}
+
+.iconfooter__list {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.iconfooter__item {
+  fill: var(--border__customer);
+  background-color: var(--background__color2);
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text__socialfooter {
+  color: var(--primary__color);
+  font-family: var(--font-family);
+  font-size: 14px;
+  line-break: 16.41px;
+  letter-spacing: 0.03em;
 }
 
 .list__icon__footer {
@@ -434,7 +482,7 @@ ul {
 }
 
 .icon__item {
-  color: var(--text__color);
+  fill: var(--border__customer);
   background-color: var(--primary__color);
   border-radius: 50%;
   width: 44px;
@@ -444,10 +492,17 @@ ul {
   align-items: center;
 }
 
+.icon {
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+}
+.iconfooter__item:hover,
 .icon__item:hover {
   background-color: var(--buttons__color);
 }
 
+.iconfooter__item:hover .icon,
 .icon__item:hover .icon {
   fill: var(--primary__color);
 }
@@ -461,7 +516,7 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   justify-content: center;
-  padding: 59px 0px 44.02px 0px;
+  padding: 59px 0px 0px 0px;
 }
 
 .list__customer {
@@ -469,6 +524,7 @@ ul {
   justify-content: space-between;
   align-items: center;
   align-items: center;
+  padding: 44px 0px 150px 0px;
 }
 
 .item__customer {
@@ -484,12 +540,15 @@ ul {
 .icon__customer {
   width: 106px;
   height: 53px;
+  fill: var(--border__customer);
 }
 
 .item__customer:hover {
-  background-color: var(--buttons__color);
+  border: 1px solid var(--buttons__color);
+  cursor: pointer;
 }
 
-.icon__item:hover .icon {
-  fill: var(--primary__color);
+.icon__customer:hover {
+  fill: var(--buttons__color);
+  cursor: pointer;
 }
